# compile-pdf-trap

./: pyproject.toml
.github/workflows/: publish-pypi.yml
src/compile_pdf_trap/: __init__.py  api.py  cli.py  engine.py  extract.py  policy_schema.py  verify.py
src/compile_pdf_trap/engines/: external.py  ghostscript.py  pure_python.py
tests/: conftest.py  test_trap_api.py  test_trap_cli.py  test_trap_determinism.py  test_trap_diff_lineage_lookup.py  test_trap_engine.py  test_trap_extract.py  test_trap_extract_cli.py  test_trap_nonrect.py  test_trap_policy_schema.py  test_trap_surface.py  test_trap_verify.py
