[project]
name = "compile-pdf-trap"
version = "0.2.0"
description = "CompilePDF trap producer — ink-pair spread/choke trapping with OCG layer output."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Print With Synergy", email = "iam@quincy.codes" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "compile-pdf-core>=0.1.0,<1.0",
  "codex-pdf>=1.15.0,<2.0",
  "fastapi>=0.110",
  "pikepdf>=8.13",
  "pydantic>=2.6",
  "click>=8.1",
  "structlog>=24.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
geom = ["pyclipr>=0.1.6"]
trap-gs = []
trap-external = []
verify-visual = ["PyMuPDF>=1.24", "anthropic>=0.27"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "pyclipr>=0.1.6",
]

[project.scripts]
compile-pdf-trap = "compile_pdf_trap.cli:main"

[project.urls]
Homepage = "https://compilepdf.com"
Repository = "https://github.com/printwithsynergy/compile-pdf-trap"
Issues = "https://github.com/printwithsynergy/compile-pdf-trap/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compile_pdf_trap"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["codex_pdf", "codex_pdf.*", "pyclipr", "pyclipr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/compile_pdf_trap"]
branch = true
